tests/ui/rpc/fail/function_bare_self.rs
use zod::{rpc, Namespace};

#[derive(Namespace)]
struct A;

#[rpc]
impl A {
    async fn test(self) {}
}

fn main() {}
